// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TokenLinkCell > renders known token on a different chain 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    aria-haspopup="dialog"
    data-base-ui-click-trigger=""
    data-slot="ui-popover-trigger"
    id="base-ui-_r_5_"
    role="none"
    style="align-items: stretch; box-sizing: border-box; display: flex; flex-basis: auto; flex-direction: column; flex-shrink: 0; margin: 0px; min-height: 0; min-width: 0; padding: 0px; position: relative;"
    tabindex="-1"
  >
    <div
      class="[container-name:true] flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] [cursor:pointer] bg-transparent [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[var(--ca-opacity)] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
      role="none"
      style="--ca-opacity: 1;"
    >
      <a
        class="cursor-pointer no-underline text-neutral1 transition-opacity duration-100 hover:opacity-80 active:opacity-60"
        data-discover="true"
        href="/explore/tokens/polygon/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
      >
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[8px] max-w-[var(--c-max-w)]"
          style="--c-max-w: 100px;"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)] whitespace-nowrap text-ellipsis overflow-hidden"
          >
            USDC
          </span>
          <div
            class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)] relative [pointer-events:auto]"
            data-testid="token-logo"
            style="--c-w: 22px; --c-h: 22px;"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
              style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
            />
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center px-[var(--c-px)] w-[var(--c-w)] h-[var(--c-h)] rounded-[999999px]"
              style="--c-px: 5.5px; --c-w: 22px; --c-h: 22px; background-color: rgb(235, 248, 255);"
            >
              <span
                class="box-border m-0 [word-wrap:break-word] [line-height:18.4px] [font-family:var(--stext-font-medium)] [font-weight:var(--c-fowe)] [color:var(--c-col)] text-center text-[length:var(--c-text)] whitespace-nowrap text-clip [display:var(--c-di)] max-w-[var(--c-max-w)] overflow-hidden"
                style="--c-text: 6.666666666666666px; --c-fowe: 500; --c-col: #2ABDFF; --c-max-w: 11px; --c-di: inline-block;"
              >
                USD
              </span>
            </div>
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
              style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
            >
              <div
                class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                data-testid="network-logo-137"
                style="--c-z: 10; width: 12px; height: 12px; border-radius: 3.5999999999999996px; border-width: 1.5px;"
              >
                <div
                  class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style="object-fit: contain; width: 10px; height: 10px;"
                >
                  <div
                    class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                    style="background-image: url(polygon-logo.png);"
                  />
                  <img
                    alt=""
                    class="css-accessibilityImage-9pa8cd"
                    draggable="false"
                    src="polygon-logo.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TokenLinkCell > renders known token on mainnet 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    aria-haspopup="dialog"
    data-base-ui-click-trigger=""
    data-slot="ui-popover-trigger"
    id="base-ui-_r_3_"
    role="none"
    style="align-items: stretch; box-sizing: border-box; display: flex; flex-basis: auto; flex-direction: column; flex-shrink: 0; margin: 0px; min-height: 0; min-width: 0; padding: 0px; position: relative;"
    tabindex="-1"
  >
    <div
      class="[container-name:true] flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] [cursor:pointer] bg-transparent [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[var(--ca-opacity)] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
      role="none"
      style="--ca-opacity: 1;"
    >
      <a
        class="cursor-pointer no-underline text-neutral1 transition-opacity duration-100 hover:opacity-80 active:opacity-60"
        data-discover="true"
        href="/explore/tokens/ethereum/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
      >
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[8px] max-w-[var(--c-max-w)]"
          style="--c-max-w: 100px;"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)] whitespace-nowrap text-ellipsis overflow-hidden"
          >
            USDC
          </span>
          <div
            class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)] relative [pointer-events:auto]"
            data-testid="token-logo"
            style="--c-w: 22px; --c-h: 22px;"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
              style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
            />
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center px-[var(--c-px)] w-[var(--c-w)] h-[var(--c-h)] rounded-[999999px]"
              style="--c-px: 5.5px; --c-w: 22px; --c-h: 22px; background-color: rgb(235, 248, 255);"
            >
              <span
                class="box-border m-0 [word-wrap:break-word] [line-height:18.4px] [font-family:var(--stext-font-medium)] [font-weight:var(--c-fowe)] [color:var(--c-col)] text-center text-[length:var(--c-text)] whitespace-nowrap text-clip [display:var(--c-di)] max-w-[var(--c-max-w)] overflow-hidden"
                style="--c-text: 6.666666666666666px; --c-fowe: 500; --c-col: #2ABDFF; --c-max-w: 11px; --c-di: inline-block;"
              >
                USD
              </span>
            </div>
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
              style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
            >
              <div
                class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                data-testid="network-logo-1"
                style="--c-z: 10; width: 12px; height: 12px; border-radius: 3.5999999999999996px; border-width: 1.5px;"
              >
                <div
                  class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style="object-fit: contain; width: 10px; height: 10px;"
                >
                  <div
                    class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                    style="background-image: url(ethereum-logo.png);"
                  />
                  <img
                    alt=""
                    class="css-accessibilityImage-9pa8cd"
                    draggable="false"
                    src="ethereum-logo.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TokenLinkCell > renders unknown token 1`] = `
<DocumentFragment>
  <div
    aria-expanded="false"
    aria-haspopup="dialog"
    data-base-ui-click-trigger=""
    data-slot="ui-popover-trigger"
    id="base-ui-_r_1_"
    role="none"
    style="align-items: stretch; box-sizing: border-box; display: flex; flex-basis: auto; flex-direction: column; flex-shrink: 0; margin: 0px; min-height: 0; min-width: 0; padding: 0px; position: relative;"
    tabindex="-1"
  >
    <div
      class="[container-name:true] flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 [container-type:normal] rounded-[12px] [cursor:pointer] bg-transparent [transition:transform_80ms_ease-in-out,_opacity_80ms_ease-in-out] active:opacity-[var(--ca-opacity)] active:[transform:scale(0.98)] focus-visible:[transform:scaleX(0.98)_scaleY(0.98)] focus-visible:[outline-offset:1px] focus-visible:[outline-style:solid] focus-visible:[outline-width:1px] focus-visible:[outline-color:var(--neutral3)] group"
      role="none"
      style="--ca-opacity: 1;"
    >
      <a
        class="cursor-pointer no-underline text-neutral1 transition-opacity duration-100 hover:opacity-80 active:opacity-60"
        data-discover="true"
        href="/explore/tokens/ethereum/0xA0b86991c6218b36c1d19D4a2e9Eb0cE3606eB48"
      >
        <div
          class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[8px] max-w-[var(--c-max-w)]"
          style="--c-max-w: 100px;"
        >
          <span
            class="[display:inline] box-border m-0 [word-wrap:break-word] [font-family:var(--stext-font-book)] text-[16px] [line-height:22px] [font-weight:485] [color:var(--stext-neutral1)] whitespace-nowrap text-ellipsis overflow-hidden"
          >
            UNKNOWN
          </span>
          <div
            class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[var(--c-w)] h-[var(--c-h)] relative [pointer-events:auto]"
            data-testid="token-logo"
            style="--c-w: 22px; --c-h: 22px;"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
              style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
            />
            <div
              class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center px-[var(--c-px)] w-[var(--c-w)] h-[var(--c-h)] rounded-[999999px]"
              style="--c-px: 5.5px; --c-w: 22px; --c-h: 22px; background-color: rgb(235, 248, 255);"
            >
              <span
                class="box-border m-0 [word-wrap:break-word] [line-height:18.4px] [font-family:var(--stext-font-medium)] [font-weight:var(--c-fowe)] [color:var(--c-col)] text-center text-[10px] whitespace-nowrap text-clip [display:var(--c-di)] max-w-[var(--c-max-w)] overflow-hidden"
                style="--c-fowe: 500; --c-col: #2ABDFF; --c-max-w: 11px; --c-di: inline-block;"
              />
            </div>
            <div
              class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
              style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
            >
              <div
                class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                data-testid="network-logo-1"
                style="--c-z: 10; width: 12px; height: 12px; border-radius: 3.5999999999999996px; border-width: 1.5px;"
              >
                <div
                  class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                  style="object-fit: contain; width: 10px; height: 10px;"
                >
                  <div
                    class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                    style="background-image: url(ethereum-logo.png);"
                  />
                  <img
                    alt=""
                    class="css-accessibilityImage-9pa8cd"
                    draggable="false"
                    src="ethereum-logo.png"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </a>
    </div>
  </div>
</DocumentFragment>
`;
